--- a/cluster/apps/default/sabnzbd/helm-release.yaml
+++ b/cluster/apps/default/sabnzbd/helm-release.yaml
@@ -25,10 +25,15 @@ spec:
     remediation:
       retries: 5
   values:
-    initContainers:
-        - name: init-chown
-          image: busybox:1.28
-          command: [ 'sh', '-c', 'chown -R 1000:1000 /']
+    init-permission: 
+      image: busybox:1.35.0
+      imagePullPolicy: IfNotPresent
+      command: 
+        - sh    - -c
+      args: 
+        - chown -R 1000:1000 /
+      securityContext: 
+        runAsUser: 0
     image:
       repository: lscr.io/linuxserver/sabnzbd
       tag: "3.6.1"
