--- a/cluster/apps/default/sonarr/helm-release.yaml
+++ b/cluster/apps/default/sonarr/helm-release.yaml
@@ -24,15 +24,16 @@ spec:
     remediation:
       retries: 5
   values:
-    init-permission: 
-      image: busybox:1.35.0
-      imagePullPolicy: IfNotPresent
-      command: 
-        - sh    - -c
-      args: 
-        - chown -R 1000:1000 /config
-      securityContext: 
-        runAsUser: 0
+    initContainers: 
+      init-permission: 
+        image: busybox:1.35.0
+        imagePullPolicy: IfNotPresent
+        command: 
+          - sh    - -c
+        args: 
+          - chown -R 1000:1000 /config
+        securityContext: 
+          runAsUser: 0
     image:
       repository: lscr.io/linuxserver/sonarr
       tag: "3.0.9"
