--- a/cluster/apps/default/sonarr/helm-release.yaml
+++ b/cluster/apps/default/sonarr/helm-release.yaml
@@ -24,21 +24,13 @@ spec:
     remediation:
       retries: 5
   values:
-    initContainers: 
-      init-permission: 
-        image: busybox:1.35.0
-        imagePullPolicy: IfNotPresent
-        command: 
-          - sh    - -c
-        args: 
-          - chown -R 1000:1000 /config
-        securityContext: 
-          runAsUser: 0
     image:
       repository: lscr.io/linuxserver/sonarr
       tag: "3.0.9"
     env:
       TZ: "${TIMEZONE}"
+      PUID: 911
+      PGID: 911
     service:
       main:
         ports:
@@ -79,6 +71,6 @@ spec:
         mountPath: /downloads
     # to avoid permissions issues on volume
     podSecurityContext:
-      runAsUser: 0
-      runAsGroup: 0
-      fsGroup: 0
+      runAsUser: 911
+      runAsGroup: 911
+      fsGroup: 911
