--- a/cluster/apps/default/themepark/helm-release.yaml
+++ b/cluster/apps/default/themepark/helm-release.yaml
@@ -41,7 +41,7 @@ spec:
         ingressClassName: "traefik"
         annotations:
             traefik.ingress.kubernetes.io/router.entrypoints: websecure
-            traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd
+            # traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd
             external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
             external-dns/is-public: "true"
         hosts:
