--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -49,7 +49,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/icon: "plex"
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          traefik.ingress.kubernetes.io/router.middlewares: "redirect-web-to-443@internal"
+          # traefik.ingress.kubernetes.io/router.middlewares: "redirect-web-to-443@internal"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
           external-dns/is-public: "true"
         hosts:
