--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -29,6 +29,7 @@ spec:
       tag: 1.29.0.6244-819d3678c
     env:
       TZ: "${TIMEZONE}"
+      ADVERTISE_IP: "http://${PLEX_ENDPOINT}:32400,https://{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}:443"
       PLEX_UID: 0
       PLEX_GID: 0
     service:
@@ -36,6 +37,7 @@ spec:
         type: LoadBalancer
         annotations:
           metallb.universe.tf/loadBalancerIPs: ${PLEX_ENDPOINT}
+          traefik.ingress.kubernetes.io/service.serversscheme: https
         externalTrafficPolicy: Local
         ports:
           http:
