--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -14,3 +14,4 @@ includes:
   cluster: .taskfiles/ClusterTasks.yaml
   terraform: .taskfiles/TerraformTasks.yaml
   ansible: .taskfiles/AnisbleTasks.yaml
+  sops: .taskfiles/SopsTasks.yaml
