--- a/cluster/apps/default/minio/helm-release.yaml
+++ b/cluster/apps/default/minio/helm-release.yaml
@@ -38,8 +38,10 @@ spec:
         ports:
           http:
             port: &port-console 9001
-          api:
-            enabled: true
+      api:
+        enabled: true
+        ports:
+          http:
             port: &port-api 9000
     ingress:
       main:
@@ -51,6 +53,20 @@ spec:
           external-dns/is-public: "true"
         hosts:
         - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
+          paths:
+            - path: /
+              pathType: Prefix
+              service:
+                port: *port-console
+      api:
+        enabled: true
+        ingressClassName: "traefik"
+        annotations:
+          traefik.ingress.kubernetes.io/router.entrypoints: websecure
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+          external-dns/is-public: "true"
+        hosts:
+        - host: &host "s3.${SECRET_PUBLIC_DOMAIN}"
           paths:
             - path: /
               pathType: Prefix
