--- a/cluster/apps/social/lemmy/db/secret.sops.yaml
+++ b/cluster/apps/social/lemmy/db/secret.sops.yaml
@@ -5,7 +5,8 @@ metadata:
     namespace: social
 type: Opaque
 stringData:
-    postgres-password: ENC[AES256_GCM,data:OLjywBy0W+XrG+4NTLFowy4JbUSHHI24DcYMAIbkUVVHEV/dHCwcVRBNRUB4r0N4TeQ=,iv:V8keQAAkJzOsHH811h8bTkcaXYc6mVJukh49T6vfmQ4=,tag:Qdn+nhMXV3Xnfe0VcURYJQ==,type:str]
+    postgres-password: ENC[AES256_GCM,data:5DTYV1xHuCJz4I/bFeypd3a8Rc87b8H1HvfcyZhEj3XUwaxIOJ9rCqIGCbWc6aeAygM=,iv:DmRv/zXRnsw/9jzMz8UV3Lnq1LWRctTQ5G6270j5UAc=,tag:IHl1miRgw/y96Y0JgjKaxQ==,type:str]
+    password: ENC[AES256_GCM,data:cPwAJnvTQdJBIaGEScfPLW4j5KcSD7Vnzoge8BDIUX2VWL/fN3ugK7KIAEtFbrUeahU=,iv:5yjG5rU328tYbE9YbIkpw3ThVx8/UHk3nnu2eAXp9Fs=,tag:dEyiN4IUXeeioEhRqBKi0w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +16,14 @@ sops:
         - recipient: age17r33fln8jyfzrdxshtnv38dmyst33q8g3c2c5f9r8lcvkxa4ggrq07sffm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaK1JIU2c2Q0tjN1BCalhN
-            U1dQU1Y3Q2dCSjd6aklZcXV1NVB5VDMwcFNFCk9iT25TZE5xVDh4N29CSHdvUlUr
-            RHQzUFFtQkZ5VisvaCtkRC84ZEF2RWMKLS0tIDhRQWY5UTlIbGw2V2lESTl4bmdj
-            UWNSNEQ3K1N5S0oxS0xBNGMwQk1obHcKD4h+v6sFqaxR3TaCecMby03nUa7HWq+C
-            T6afHO8+QtISp0UZ0UWzXh+Yt8S+0P2LfnCwlN33VYMh9i7DmhnrBg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLKzFoVUFMY25maXhjdVAx
+            cVM5SURobXpHWkxoUEp4NTRtVDUzOWdKR0hzClhYclV6dU1FVkNvTTNCaTlhVWsv
+            MzlubktxL0dGZ2pqemJ5L0cwOHhONTQKLS0tIDFod3dMNXpnQ011VzE3V1M3b0lu
+            dkZzQkZHYTZNNzlQRjdmSEk0YldkNzAKQRpoNPKMuYCf8TazAKWQquo/APRQ1JbP
+            sVk5nuvf5027cL8hzz/ir1V66QjH3O+pEtqkI5M0KSyn8AtdqHqN1g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-11T20:37:01Z"
-    mac: ENC[AES256_GCM,data:QVfukj714Hret3lZxu6UQXIqMmbwxM0E4BRHv3kVkV2mrMHiGT+F9ltK5FWyyfWdpWXWWkJhH8gmfqhMdyNfBkPlgO52R97w5taOXdsbU9WTadliTuVwm6mHR8te2GVO9GlBhyfhhtcNwEYqeUhVveW7LZBZip5/1gAXCiCbvok=,iv:D+T+yzksAjHS27R2uh8M1hENN0dCHrvkPzzBbEa5F40=,tag:p5y1Im4A/N+jxw2kHm8F6A==,type:str]
+    lastmodified: "2023-07-11T21:23:10Z"
+    mac: ENC[AES256_GCM,data:AZve/zZVKRjCm1mvBGpHE/PZeCrBCfxqgfCtzL/lGgiMO6ZpuYvUd2T3zF6SP4YGNThvjYiAl2YVft8mssqt0grkqiSzgfwp/9MTtOdA4EV3yjMXxue2OCUKTSQer1C7eqplYLomXKOmF+UOVvBWg+ROmn67/bnGbT5Dt3Bg8aA=,iv:czNyoUvlkv48OAQrh/fkoKIH486Tk8B4PM5U6yeg26Q=,tag:fRwFCLr0zXIVWe69GAVsZQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
